--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ p {
 .benefits {
     margin-right: 20px;
     padding: 20px;
+    padding-bottom: 86px;
     clear: both;
     float: right;
     width: 20%;
@@ -193,6 +194,7 @@ p {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    background-color: #2a607c;
 }
 
 .footer h2 {
