--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,8 +46,8 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
+body {
+    background-color: #d9dcd6;
 }
 
 .hero {
@@ -75,16 +75,25 @@ p {
     margin-left: 20px;
 }
 
+.content p {
+    font-size: 30px;
+
+}
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    padding-bottom: 86px;
+    padding-bottom: 2.5px;
     clear: both;
     float: right;
     width: 20%;
-    height: 100%;
+    height: 20px, 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+}
+
+.benefits p {
+    font-size: 18px;
 }
 
 .benefit-lead {
@@ -101,6 +110,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
 
 .benefit-lead h3 {
     margin-bottom: 10px;
@@ -120,19 +130,19 @@ p {
 .benefit-lead img {
     display: block;
     margin: 10px auto;
-    max-width: 150px;
+    max-width: 200px;
 }
 
 .benefit-brand img {
     display: block;
     margin: 10px auto;
-    max-width: 150px;
+    max-width: 200px;
 }
 
 .benefit-cost img {
     display: block;
     margin: 10px auto;
-    max-width: 150px;
+    max-width: 200px;
 }
 
 .search-engine-optimization {
