--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .hero {
-    height: 800px;
+    height: 1000px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -76,44 +76,41 @@ body {
 }
 
 .content p {
-    font-size: 30px;
-
+    font-size: 20px;
 }
 
 .benefits {
-    margin-right: 20px;
-    padding: 20px;
-    padding-bottom: 2.5px;
+    margin-right: 32px;
+    padding: 10px;
     clear: both;
     float: right;
     width: 20%;
-    height: 20px, 300px;
+    height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
 .benefits p {
-    font-size: 18px;
-    text-align: center;
+    font-size: 20px;
 }
 
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
-    font-size: 28px;
+    font-size: 20px;
 }
 
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
-    font-size: 28px;
+    font-size: 20px;
 }
 
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
+    font-size: 20px;
 }
-
 
 .benefit-lead h3 {
     margin-bottom: 10px;
@@ -133,19 +130,19 @@ body {
 .benefit-lead img {
     display: block;
     margin: 10px auto;
-    max-width: 200px;
+    max-width: 150px;
 }
 
 .benefit-brand img {
     display: block;
     margin: 10px auto;
-    max-width: 200px;
+    max-width: 150px;
 }
 
 .benefit-cost img {
     display: block;
     margin: 10px auto;
-    max-width: 200px;
+    max-width: 150px;
 }
 
 .search-engine-optimization {
@@ -207,7 +204,6 @@ body {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    background-color: #2a607c;
 }
 
 .footer h2 {
